--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>My Personal Website</h1>
     <p>Welcome to my personal little space on the web. 🌐</p>
+    <a href="./about.html">About me</a>
   </body>
 </html>
